MB-36380 [1/2]: Regression test for missing Flusher wakeup

Regression test for the wakeup issue seen in MB-36380. The test and
fix are broken into separate patches to keep the fix patch "clean",
given the test requires new infrastructure / injection hooks.

See the associated [2/2] patch which actually fixes the issue for a
description of the problem.

Change-Id: I9d9dcc6b444fe4d03e41d58db3ed5e1de064006e
Reviewed-on: http://review.couchbase.org/116083
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>